tests/golden/fixtures/syntax-data-binary-image-tiles/expected.err
Error: invalid syntax: unexpected 'image'
   ╭─[ tests/golden/fixtures/syntax-data-binary-image-tiles/input.k65:2:5 ]
   │
 2 │     image sprites 0 0 8> 16v
   │     ────────────┬───────────  
   │                 ╰───────────── asset-block keyword inside `data {...}`
   │ 
   │ Help: `image` opens a dedicated asset block — write it at top level as `data image NAME "file" { ... }` (or `data tiles NAME "file" { tiles ... }` for the tile shape); inside a generic `data NAME {...}` block only data entries (`byte`, `word`, `far`, `address`, `align`, `nocross`, labels, segments) are accepted
   │ 
   │ Note: K816 distinguishes generic data blocks (raw byte/word/far/address payloads) from asset blocks (image/binary/tiles), which open a typed sub-grammar; mixing them silently would obscure encoding errors, so the parser refuses asset keywords in the generic block.
───╯

Error: invalid syntax: unexpected 'image'
   ╭─[ tests/golden/fixtures/syntax-data-binary-image-tiles/input.k65:3:5 ]
   │
 3 │     image "sprites_alt" 8 0 8> 8v inv
   │     ────────────────┬────────────────  
   │                     ╰────────────────── asset-block keyword inside `data {...}`
   │ 
   │ Help: `image` opens a dedicated asset block — write it at top level as `data image NAME "file" { ... }` (or `data tiles NAME "file" { tiles ... }` for the tile shape); inside a generic `data NAME {...}` block only data entries (`byte`, `word`, `far`, `address`, `align`, `nocross`, labels, segments) are accepted
   │ 
   │ Note: K816 distinguishes generic data blocks (raw byte/word/far/address payloads) from asset blocks (image/binary/tiles), which open a typed sub-grammar; mixing them silently would obscure encoding errors, so the parser refuses asset keywords in the generic block.
───╯

Error: invalid syntax: unexpected 'tiles'
   ╭─[ tests/golden/fixtures/syntax-data-binary-image-tiles/input.k65:4:5 ]
   │
 4 │     tiles 8 0 4
   │     ─────┬─────  
   │          ╰─────── asset-block keyword inside `data {...}`
   │ 
   │ Help: `tiles` opens a dedicated asset block — write it at top level as `data tiles NAME "file" { ... }` (or `data tiles NAME "file" { tiles ... }` for the tile shape); inside a generic `data NAME {...}` block only data entries (`byte`, `word`, `far`, `address`, `align`, `nocross`, labels, segments) are accepted
   │ 
   │ Note: K816 distinguishes generic data blocks (raw byte/word/far/address payloads) from asset blocks (image/binary/tiles), which open a typed sub-grammar; mixing them silently would obscure encoding errors, so the parser refuses asset keywords in the generic block.
───╯

Error: invalid syntax: unexpected 'colormode'
   ╭─[ tests/golden/fixtures/syntax-data-binary-image-tiles/input.k65:5:5 ]
   │
 5 │     colormode 1
   │     ─────┬─────  
   │          ╰─────── asset-block keyword inside `data {...}`
   │ 
   │ Help: `colormode` opens a dedicated asset block — write it at top level as `data colormode NAME "file" { ... }` (or `data tiles NAME "file" { tiles ... }` for the tile shape); inside a generic `data NAME {...}` block only data entries (`byte`, `word`, `far`, `address`, `align`, `nocross`, labels, segments) are accepted
   │ 
   │ Note: K816 distinguishes generic data blocks (raw byte/word/far/address payloads) from asset blocks (image/binary/tiles), which open a typed sub-grammar; mixing them silently would obscure encoding errors, so the parser refuses asset keywords in the generic block.
───╯

Error: invalid syntax: unexpected 'imgwave'
   ╭─[ tests/golden/fixtures/syntax-data-binary-image-tiles/input.k65:6:5 ]
   │
 6 │     imgwave 1 2 "3" 4
   │     ────────┬────────  
   │             ╰────────── asset-block keyword inside `data {...}`
   │ 
   │ Help: `imgwave` opens a dedicated asset block — write it at top level as `data imgwave NAME "file" { ... }` (or `data tiles NAME "file" { tiles ... }` for the tile shape); inside a generic `data NAME {...}` block only data entries (`byte`, `word`, `far`, `address`, `align`, `nocross`, labels, segments) are accepted
   │ 
   │ Note: K816 distinguishes generic data blocks (raw byte/word/far/address payloads) from asset blocks (image/binary/tiles), which open a typed sub-grammar; mixing them silently would obscure encoding errors, so the parser refuses asset keywords in the generic block.
───╯

Error: invalid syntax: unexpected 'binary'
    ╭─[ tests/golden/fixtures/syntax-data-binary-image-tiles/input.k65:10:5 ]
    │
 10 │     binary "table.bin"
    │     ─────────┬────────  
    │              ╰────────── asset-block keyword inside `data {...}`
    │ 
    │ Help: `binary` opens a dedicated asset block — write it at top level as `data binary NAME "file" { ... }` (or `data tiles NAME "file" { tiles ... }` for the tile shape); inside a generic `data NAME {...}` block only data entries (`byte`, `word`, `far`, `address`, `align`, `nocross`, labels, segments) are accepted
    │ 
    │ Note: K816 distinguishes generic data blocks (raw byte/word/far/address payloads) from asset blocks (image/binary/tiles), which open a typed sub-grammar; mixing them silently would obscure encoding errors, so the parser refuses asset keywords in the generic block.
────╯
